Only folder can be passed to CPS.createResource()